--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "bunyan": "^1.8.5",
-    "chrome-headless-render-pdf": "^1.3.1",
     "config": "^1.21.0",
     "ct-register-microservice-node": "2.1.2",
     "jsonapi-serializer": "2.1.1",
@@ -49,6 +48,7 @@
     "koa-mount": "2.0.0",
     "koa-router": "^7.0.1",
     "koa-send": "^4.1.0",
+    "puppeteer": "^0.9.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "rimraf": "^2.6.1",
