added protocol validation for url, added support for mediatype, width and height

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "rimraf": "^2.6.1",
-    "tmp": "0.0.33"
+    "tmp": "0.0.33",
+    "url": "^0.11.0"
   }
 }
