[feature] widget thumbnails

--- a/k8s/staging/deployment.yaml
+++ b/k8s/staging/deployment.yaml
@@ -52,6 +52,16 @@ spec:
                 secretKeyRef:
                   name: mssecrets
                   key: API_VERSION
+          - name: S3_ACCESS_KEY_ID
+            valueFrom:
+                secretKeyRef:
+                  name: mssecrets
+                  key: S3_ACCESS_KEY_ID
+          - name: S3_SECRET_ACCESS_KEY
+            valueFrom:
+                secretKeyRef:
+                  name: mssecrets
+                  key: S3_SECRET_ACCESS_KEY
 
         ports:
           - containerPort: 5000
