--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -33,6 +33,8 @@ spec:
             value: app/src
           - name: LOCAL_URL
             value: http://{name}.default.svc.cluster.local:5000
+          - name: WIDGET_RENDER_URL
+            value: https://resourcewatch.org/webshot/
           - name: CT_URL
             valueFrom:
                 secretKeyRef:
