--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint-config-airbnb": "^9.0.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint-plugin-mocha": "^6.2.2",
     "eslint-plugin-react": "^5.2.2",
     "grunt": "1.0.3",
     "grunt-apidoc": "0.11.0",
@@ -29,8 +30,8 @@
     "grunt-notify": "0.4.5",
     "load-grunt-tasks": "3.4.0",
     "mocha": "5.2.0",
-    "should": "^11.2.1",
     "nock": "^9.0.2",
+    "should": "^11.2.1",
     "superagent": "^3.3.1",
     "supertest": "^3.0.0"
   },
