--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
-  "name": "node-skeleton",
+  "name": "webshot",
   "version": "1.0.0",
-  "description": "",
+  "description": "Webshot micro service for the Resource Watch API.",
   "main": "index.js",
   "scripts": {
     "test": "NODE_PATH=app/src node $NODE_DEBUG_OPTION ./node_modules/.bin/grunt --gruntfile app/Gruntfile.js e2eTest",
     "start": "NODE_PATH=app/src node $NODE_DEBUG_OPTION app/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/resource-watch/webshot.git"
+  },
   "keywords": [],
-  "author": "Vizzuality",
+  "author": {
+    "name": "Vizzuality",
+    "email": "hello@vizzuality.com",
+    "url": "http://vizzuality.com/"
+  },
   "license": "MIT",
   "devDependencies": {
     "assert": "^1.4.1",
     "babel-eslint": "^6.1.0",
-    "eslint": "^2.12.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.5.3",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^6.2.2",
-    "eslint-plugin-react": "^5.2.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "grunt": "1.0.3",
     "grunt-apidoc": "0.11.0",
     "grunt-cli": "1.3.2",
@@ -28,7 +37,6 @@
     "grunt-express-server": "0.5.4",
     "grunt-mocha-test": "0.13.3",
     "grunt-notify": "0.4.5",
-    "load-grunt-tasks": "3.4.0",
     "mocha": "5.2.0",
     "nock": "^9.0.2",
     "should": "^11.2.1",
@@ -50,6 +58,7 @@
     "koa-mount": "2.0.0",
     "koa-router": "^7.0.1",
     "koa-send": "^4.1.0",
+    "load-grunt-tasks": "^5.1.0",
     "puppeteer": "^0.12.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
