--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "grunt-express-server": "0.5.4",
     "grunt-mocha-test": "0.13.3",
     "grunt-notify": "0.4.5",
+    "husky": "^3.1.0",
+    "lint-staged": "^9.5.0",
     "mocha": "5.2.0",
     "nock": "^9.0.2",
     "should": "^11.2.1",
@@ -69,5 +71,16 @@
     "s3": "^4.4.0",
     "tmp": "0.0.33",
     "url": "^0.11.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   }
 }
