Add readiness and liveliness checks to k8s config

--- a/k8s/staging/deployment.yaml
+++ b/k8s/staging/deployment.yaml
@@ -67,6 +67,23 @@ spec:
 
         ports:
           - containerPort: 5000
+        readinessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /healthcheck
+            port: 4100
+          initialDelaySeconds: 30
+          timeoutSeconds: 5
+          periodSeconds: 15
+        livenessProbe:
+          httpGet:
+            scheme: HTTP
+            path: /healthcheck
+            port: 4100
+          failureThreshold: 3
+          initialDelaySeconds: 30
+          timeoutSeconds: 5
+          periodSeconds: 15
         securityContext:
           privileged: true
 
