--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "assert": "^1.4.1",
     "babel-eslint": "^6.1.0",
+    "chai-http": "^4.3.0",
     "eslint": "^6.7.2",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -51,6 +52,7 @@
   "dependencies": {
     "bluebird": "^3.4.7",
     "bunyan": "^1.8.5",
+    "chai": "^4.2.0",
     "config": "^1.21.0",
     "ct-register-microservice-node": "^2.1.7",
     "dotenv": "^5.0.0",
@@ -63,6 +65,7 @@
     "koa-mount": "2.0.0",
     "koa-router": "^7.0.1",
     "koa-send": "^4.1.0",
+    "koa-simple-healthcheck": "^0.0.1",
     "load-grunt-tasks": "^5.1.0",
     "puppeteer": "^0.12.0",
     "request": "^2.79.0",
