--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "url": "http://vizzuality.com/"
   },
   "engines": {
-    "node": "~11"
+    "node": "~12"
   },
   "license": "MIT",
   "devDependencies": {
@@ -52,6 +52,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "@auth0/s3": "^1.0.0",
     "bluebird": "^3.4.7",
     "bunyan": "^1.8.5",
     "chai": "^4.2.0",
@@ -73,7 +74,6 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "rimraf": "^2.6.1",
-    "s3": "^4.4.0",
     "tmp": "0.0.33",
     "url": "^0.11.0"
   },
