--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mocha": "5.2.0",
     "nock": "^9.0.2",
     "should": "^11.2.1",
+    "sinon": "^7.5.0",
     "superagent": "^3.3.1",
     "supertest": "^3.0.0"
   },
