--- a/package.json
+++ b/package.json
@@ -46,12 +46,10 @@
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "load-grunt-tasks": "^5.1.0",
-    "mocha": "5.2.0",
-    "nock": "^9.0.2",
+    "mocha": "^6.2.2",
+    "nock": "^11.7.0",
     "should": "^11.2.1",
-    "sinon": "^7.5.0",
-    "superagent": "^3.3.1",
-    "supertest": "^3.0.0"
+    "sinon": "^7.5.0"
   },
   "dependencies": {
     "@auth0/s3": "^1.0.0",
