--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -6,5 +6,8 @@ test:
   environment:
     NODE_ENV: test
     CT_URL: http://mymachine:9000
+    CT_REGISTER_MODE: auto
     API_VERSION: v1
+    S3_ACCESS_KEY_ID: 1
+    S3_SECRET_ACCESS_KEY: 1
   command: test
