--- a/k8s/production/hpa.yaml
+++ b/k8s/production/hpa.yaml
@@ -1,13 +1,13 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {name}
+  name: webshot
   namespace: default
 spec:
   scaleTargetRef:
     apiVersion: apps/v1beta1
     kind: Deployment
-    name: {name}
+    name: webshot
   minReplicas: 1
   maxReplicas: 3
   targetCPUUtilizationPercentage: 50
