--- a/k8s/services/service.yaml
+++ b/k8s/services/service.yaml
@@ -2,10 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    name: {name}
-  name: {name}
+    name: webshot
+  name: webshot
 spec:
   ports:
     - port: 5000
   selector:
-    name: {name}
+    name: webshot
