--- a/package.json
+++ b/package.json
@@ -23,33 +23,32 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "assert": "^1.4.1",
-    "babel-eslint": "^6.1.0",
+    "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "eslint": "^6.7.2",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-mocha": "^6.2.2",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "grunt": "1.0.3",
-    "grunt-apidoc": "0.11.0",
-    "grunt-cli": "1.3.2",
-    "grunt-contrib-clean": "2.0.0",
-    "grunt-contrib-jshint": "2.0.0",
-    "grunt-contrib-watch": "1.1.0",
-    "grunt-express-server": "0.5.4",
-    "grunt-mocha-test": "0.13.3",
-    "grunt-notify": "0.4.5",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.4.0",
+    "grunt": "^1.0.4",
+    "grunt-apidoc": "^0.11.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-express-server": "^0.5.4",
+    "grunt-mocha-test": "^0.13.3",
+    "grunt-notify": "^0.4.5",
     "grunt-simple-nyc": "^3.0.1",
-    "husky": "^3.1.0",
-    "lint-staged": "^9.5.0",
+    "husky": "^4.2.3",
+    "lint-staged": "^10.0.7",
     "load-grunt-tasks": "^5.1.0",
-    "mocha": "^6.2.2",
-    "nock": "^11.7.0",
-    "should": "^11.2.1",
-    "sinon": "^7.5.0"
+    "mocha": "^7.0.1",
+    "nock": "^12.0.0",
+    "should": "^13.2.3",
+    "sinon": "^8.1.1"
   },
   "dependencies": {
     "@auth0/s3": "^1.0.0",
@@ -82,9 +81,6 @@
     }
   },
   "lint-staged": {
-    "*.js": [
-      "eslint --fix",
-      "git add"
-    ]
+    "*.js": "eslint --cache --fix"
   }
 }
