--- a/k8s/staging/deployment.yaml
+++ b/k8s/staging/deployment.yaml
@@ -13,6 +13,15 @@ spec:
       labels:
         name: webshot
     spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: type
+                    operator: In
+                    values:
+                      - apps
       containers:
       - name: webshot
         image: vizzuality/webshot
