--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -1,16 +1,26 @@
-apiVersion: extensions/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
+  creationTimestamp: null
   labels:
-    name: webshot
     app: rw
+    name: webshot
   name: webshot
 spec:
+  progressDeadlineSeconds: 2147483647
+  replicas: 1
   revisionHistoryLimit: 2
+  selector:
+    matchLabels:
+      name: webshot
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
+    type: RollingUpdate
   template:
     metadata:
-      annotations:
-        chaos.alpha.kubernetes.io/enabled: "true"
+      creationTimestamp: null
       labels:
         name: webshot
     spec:
@@ -24,80 +34,91 @@ spec:
                     values:
                       - apps
       containers:
-      - name: webshot
+      - args:
+        - start
+        env:
+        - name: PORT
+          value: "5000"
+        - name: NODE_ENV
+          value: prod
+        - name: NODE_PATH
+          value: app/src
+        - name: LOCAL_URL
+          value: http://webshot.default.svc.cluster.local:5000
+        - name: WIDGET_RENDER_URL
+          value: https://resourcewatch.org/webshot/
+        - name: CT_URL
+          valueFrom:
+            secretKeyRef:
+              key: CT_URL
+              name: mssecrets
+        - name: CT_TOKEN
+          valueFrom:
+            secretKeyRef:
+              key: CT_TOKEN
+              name: mssecrets
+        - name: CT_REGISTER_MODE
+          valueFrom:
+            secretKeyRef:
+              key: CT_REGISTER_MODE
+              name: mssecrets
+        - name: API_VERSION
+          valueFrom:
+            secretKeyRef:
+              key: API_VERSION
+              name: mssecrets
+        - name: S3_ACCESS_KEY_ID
+          valueFrom:
+            secretKeyRef:
+              key: S3_ACCESS_KEY_ID
+              name: mssecrets
+        - name: S3_SECRET_ACCESS_KEY
+          valueFrom:
+            secretKeyRef:
+              key: S3_SECRET_ACCESS_KEY
+              name: mssecrets
         image: vizzuality/webshot
         imagePullPolicy: Always
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /healthcheck
+            port: 5000
+            scheme: HTTP
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          successThreshold: 1
+          timeoutSeconds: 5
+        name: webshot
+        ports:
+        - containerPort: 5000
+          protocol: TCP
+        readinessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /healthcheck
+            port: 5000
+            scheme: HTTP
+          initialDelaySeconds: 30
+          periodSeconds: 15
+          successThreshold: 1
+          timeoutSeconds: 5
         resources:
-          requests:
-            cpu: "0.25"
-            memory: "256M"
           limits:
             cpu: "1"
-            memory: "512M"
-        args:
-          - start
-        env:
-          - name: PORT
-            value: "5000"
-          - name: NODE_ENV
-            value: prod
-          - name: NODE_PATH
-            value: app/src
-          - name: LOCAL_URL
-            value: http://webshot.default.svc.cluster.local:5000
-          - name: WIDGET_RENDER_URL
-            value: https://resourcewatch.org/webshot/
-          - name: CT_URL
-            valueFrom:
-                secretKeyRef:
-                  name: mssecrets
-                  key: CT_URL
-          - name: CT_TOKEN
-            valueFrom:
-                secretKeyRef:
-                  name: mssecrets
-                  key: CT_TOKEN
-          - name: CT_REGISTER_MODE
-            valueFrom:
-                secretKeyRef:
-                  name: mssecrets
-                  key: CT_REGISTER_MODE
-          - name: API_VERSION
-            valueFrom:
-                secretKeyRef:
-                  name: mssecrets
-                  key: API_VERSION
-          - name: S3_ACCESS_KEY_ID
-            valueFrom:
-                secretKeyRef:
-                  name: mssecrets
-                  key: S3_ACCESS_KEY_ID
-          - name: S3_SECRET_ACCESS_KEY
-            valueFrom:
-                secretKeyRef:
-                  name: mssecrets
-                  key: S3_SECRET_ACCESS_KEY
-
-        ports:
-          - containerPort: 5000
-        readinessProbe:
-          httpGet:
-            scheme: HTTP
-            path: /healthcheck
-            port: 5000
-          initialDelaySeconds: 30
-          timeoutSeconds: 5
-          periodSeconds: 15
-        livenessProbe:
-          httpGet:
-            scheme: HTTP
-            path: /healthcheck
-            port: 5000
-          failureThreshold: 3
-          initialDelaySeconds: 30
-          timeoutSeconds: 5
-          periodSeconds: 15
+            memory: 512M
+          requests:
+            cpu: 250m
+            memory: 256M
         securityContext:
           privileged: true
-
+        terminationMessagePath: /dev/termination-log
+        terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      imagePullSecrets:
+        - name: regcred
       restartPolicy: Always
+      schedulerName: default-scheduler
+      securityContext: {}
+      terminationGracePeriodSeconds: 30
+status: {}
