--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -13,6 +13,7 @@ develop:
     API_VERSION: v1
     S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
     S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY}
+    FASTLY_ENABLED: "false"
   command: develop
   volumes:
     - ./app:/home/webshot-service/app
