--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -77,6 +77,23 @@ spec:
             secretKeyRef:
               key: S3_SECRET_ACCESS_KEY
               name: mssecrets
+        - name: FASTLY_ENABLED
+          valueFrom:
+            secretKeyRef:
+              key: FASTLY_ENABLED
+              name: mssecrets
+        - name: FASTLY_APIKEY
+          valueFrom:
+            secretKeyRef:
+              key: FASTLY_APIKEY
+              name: mssecrets
+              optional: true
+        - name: FASTLY_SERVICEID
+          valueFrom:
+            secretKeyRef:
+              key: FASTLY_SERVICEID
+              name: mssecrets
+              optional: true
         image: vizzuality/webshot
         imagePullPolicy: Always
         livenessProbe:
