--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -94,7 +94,7 @@ spec:
               key: FASTLY_SERVICEID
               name: mssecrets
               optional: true
-        image: vizzuality/webshot
+        image: gfwdockerhub/webshot
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
