--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
-CT_URL=(URL of your control tower installation, leave empty in native usage)
-NODE_ENV=(prod|staging|dev)
-PORT=(port in which to run the application)
+CT_URL=http://mymachine:9000
+NODE_ENV=dev
+PORT=5000
