--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,12 @@ env:
     - CC_TEST_REPORTER_ID=a7e319ef5badf1c14191fc01c0342bdce0d4f7d794fd62ca8ffa3e3d522a9946
     - NODE_ENV=test
     - PORT=5037
-    - API_VERSION=v1
     - LOCAL_URL=http://127.0.0.1:5037
-    - CT_REGISTER_MODE=auto
-    - CT_URL=http://127.0.0.1:9000
+    - GATEWAY_URL=http://127.0.0.1:9000
     - MONGO_PORT_27017_TCP_ADDR=127.0.0.1
     - S3_ACCESS_KEY_ID=1
     - S3_SECRET_ACCESS_KEY=1
-    - CT_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
+    - MICROSERVICE_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
     - FASTLY_ENABLED=false
 
 before_script:
