--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -6,11 +6,9 @@ develop:
     - "35739:35729"
   privileged: true
   environment:
-    CT_REGISTER_MODE: auto
-    CT_URL: http://mymachine:9000
+    GATEWAY_URL: http://mymachine:9000
     LOCAL_URL: http://mymachine:5000
-    CT_TOKEN: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
-    API_VERSION: v1
+    MICROSERVICE_TOKEN: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
     S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
     S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY}
     FASTLY_ENABLED: "false"
