--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
+dist: focal
 language: node_js
 node_js:
-  - "12"
+  - "20.4"
 cache:
   directories:
   - "node_modules"
@@ -16,6 +17,9 @@ env:
     - S3_SECRET_ACCESS_KEY=1
     - MICROSERVICE_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
     - FASTLY_ENABLED=false
+    - AWS_REGION=us-east-1
+    - AWS_ACCESS_KEY_ID=test
+    - AWS_SECRET_ACCESS_KEY=test
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
