--- a/docker-compose-develop.yml
+++ b/docker-compose-develop.yml
@@ -1,17 +1,23 @@
-develop:
-  extends:
-    file: base.yml
-    service: base
-  ports:
-    - "35739:35729"
-  privileged: true
-  environment:
-    GATEWAY_URL: http://mymachine:9000
-    LOCAL_URL: http://mymachine:5000
-    MICROSERVICE_TOKEN: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
-    S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
-    S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY}
-    FASTLY_ENABLED: "false"
-  command: develop
-  volumes:
-    - ./app:/home/webshot-service/app
+version: "3"
+services:
+  develop:
+    build: .
+    container_name: webshot
+    ports:
+      - "35739:35729"
+    privileged: true
+    environment:
+      PORT: 5000
+      NODE_PATH: app/src
+      GATEWAY_URL: http://mymachine:9000
+      LOCAL_URL: http://mymachine:5000
+      MICROSERVICE_TOKEN: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
+      S3_ACCESS_KEY_ID: ${S3_ACCESS_KEY_ID}
+      S3_SECRET_ACCESS_KEY: ${S3_SECRET_ACCESS_KEY}
+      FASTLY_ENABLED: "false"
+      AWS_REGION: "us-east-1"
+      AWS_ACCESS_KEY_ID: "test"
+      AWS_SECRET_ACCESS_KEY: "test"
+    command: develop
+    volumes:
+      - ./app:/home/webshot-service/app
