--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -1,14 +1,21 @@
-test:
-  extends:
-    file: base.yml
-    service: base
-  container_name: webshot-service-test
-  environment:
-    NODE_ENV: test
-    GATEWAY_URL: http://mymachine:9000
-    S3_ACCESS_KEY_ID: 1
-    S3_SECRET_ACCESS_KEY: 1
-    LOCAL_URL: http://mymachine:3055
-    MICROSERVICE_TOKEN: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
-    FASTLY_ENABLED: "false"
-  command: test
+version: "3"
+services:
+  test:
+    build: .
+    ports:
+      - "5000:5000"
+    container_name: webshot-service-test
+    environment:
+      PORT: 5000
+      NODE_PATH: app/src
+      NODE_ENV: test
+      GATEWAY_URL: http://mymachine:9000
+      S3_ACCESS_KEY_ID: 1
+      S3_SECRET_ACCESS_KEY: 1
+      LOCAL_URL: http://mymachine:3055
+      MICROSERVICE_TOKEN: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6Im1pY3Jvc2VydmljZSIsImNyZWF0ZWRBdCI6IjIwMTYtMDktMTQifQ.IRCIRm1nfIQTfda_Wb6Pg-341zhV8soAgzw7dd5HxxQ
+      FASTLY_ENABLED: "false"
+      AWS_REGION: "us-east-1"
+      AWS_ACCESS_KEY_ID: "test"
+      AWS_SECRET_ACCESS_KEY: "test"
+    command: test
