--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "NODE_ENV=test NODE_PATH=app/src node $NODE_DEBUG_OPTION ./node_modules/.bin/grunt --gruntfile app/Gruntfile.js e2eTest",
     "start": "NODE_PATH=app/src node $NODE_DEBUG_OPTION app/index.js",
-    "coverage": "NODE_ENV=test NODE_PATH=app/src node $NODE_DEBUG_OPTION ./node_modules/.bin/grunt --gruntfile app/Gruntfile.js nyc"
+    "coverage": "NODE_ENV=test NODE_PATH=app/src node $NODE_DEBUG_OPTION ./node_modules/.bin/grunt --gruntfile app/Gruntfile.js nyc",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -19,40 +20,38 @@
     "url": "http://vizzuality.com/"
   },
   "engines": {
-    "node": "~12"
+    "node": "~20.4"
   },
   "license": "MIT",
   "devDependencies": {
-    "chai": "^4.3.4",
-    "chai-http": "^4.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-mocha": "^9.0.0",
-    "eslint-plugin-react": "^7.25.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "grunt": "^1.4.1",
+    "chai": "^4.3.7",
+    "chai-http": "^4.4.0",
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "grunt": "^1.6.1",
     "grunt-cli": "^1.4.3",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-express-server": "^0.5.4",
     "grunt-mocha-test": "^0.13.3",
-    "grunt-notify": "^0.4.5",
     "grunt-simple-nyc": "^3.0.1",
-    "husky": "^4.2.3",
-    "lint-staged": "^11.1.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.3",
     "load-grunt-tasks": "^5.1.0",
-    "mocha": "^9.1.1",
-    "nock": "^13.1.3",
+    "mocha": "^10.2.0",
+    "nock": "^13.3.2",
     "should": "^13.2.3",
-    "sinon": "^11.1.2"
+    "sinon": "^15.2.0"
   },
   "dependencies": {
     "@auth0/s3": "^1.0.0",
     "bluebird": "^3.4.7",
     "bunyan": "^1.8.5",
     "config": "^1.21.0",
-    "rw-api-microservice-node": "^4.0.3",
     "dotenv": "^5.0.0",
     "kcors": "^2.1.1",
     "koa": "^2.0.0",
@@ -67,15 +66,11 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "rimraf": "^2.6.1",
+    "rw-api-microservice-node": "^5.0.0-rc.6",
     "tmp": "0.0.33",
     "url": "^0.11.0"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
-    "*.js": "eslint --cache --fix"
+    "*.js": "eslint --fix"
   }
 }
