--- a/k8s/staging/deployment.yaml
+++ b/k8s/staging/deployment.yaml
@@ -88,11 +88,11 @@ spec:
                 secretKeyRef:
                   key: AWS_REGION
                   name: mssecrets
-            - name: AWS_API_KEY_USAGE_PLAN_ID
+            - name: REQUIRE_API_KEY
               valueFrom:
                 secretKeyRef:
-                  key: AWS_API_KEY_USAGE_PLAN_ID
-                  name: mssecrets
+                  key: REQUIRE_API_KEY
+                  name: authorization
           image: gfwdockerhub/webshot
           imagePullPolicy: Always
           livenessProbe:
