Fix typo in k8s config

--- a/k8s/production/deployment.yaml
+++ b/k8s/production/deployment.yaml
@@ -93,7 +93,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   key: REQUIRE_API_KEY
-                  name: authorization
+                  name: mssecrets
           image: gfwdockerhub/webshot
           imagePullPolicy: Always
           livenessProbe:
