--- a/k8s/dev/deployment.yaml
+++ b/k8s/dev/deployment.yaml
@@ -92,7 +92,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   key: REQUIRE_API_KEY
-                  name: authorization
+                  name: mssecrets
           image: gfwdockerhub/webshot
           imagePullPolicy: Always
           livenessProbe:
